add option Pattern and StoreSecretKey in SecretsManager

--- a/Authorization&Refreshtoken.csproj
+++ b/Authorization&Refreshtoken.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>Authorization_Refreshtoken</RootNamespace>
+    <UserSecretsId>d66e8ef0-c9f5-4c5b-8041-2f160e092aba</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
